# Gromacs

./: .gitlab-ci-stream.yml  CMakeLists.txt  CMakeLists.txt.bak  README  README.md  README_MPI.txt  README_tests.txt  README_threadMPI.txt  pme_solve.co  pme_spread.co
admin/gitlab-ci/: gromacs.gitlab-ci.yml
api/nblib/: CMakeLists.txt  gmxsetup.cpp  nbnxmsetuphelpers.cpp
api/nblib/tests/: nbnxmsetup.cpp
cmake/: FindEXTRAE.cmake  Findroctracer.cmake  TestHIP.hip.cpp  gmxBuildTypeReference.cmake  gmxCFlags.cmake  gmxClangCudaUtils.cmake  gmxDetectAmdGpu.cmake  gmxGenerateVersionInfo.cmake  gmxManageClangCudaConfig.cmake.bak  gmxManageCuda.cmake  gmxManageCuda.cmake.bak  gmxManageCudaAwareMPI.cmake.bak  gmxManageGPU.cmake  gmxManageGpuAmd.cmake  gmxManageGpuAwareMpi.cmake  gmxManageGpuNvidia.cmake  gmxManageHIP.cmake  gmxManageMPI.cmake  gmxManageNvccConfig.cmake  gmxManageOpenCL.cmake.bak  gmxManageSYCL.cmake  gmxVersionInfo.cmake
cmake/HipSyclTest/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt
docs/release-notes/: index.rst
docs/release-notes/2019/: 2019.5.rst
docs/release-notes/2020/: 2020.1.rst
docs/release-notes/2021/: 2021.1.rst
src/: CMakeLists.txt  buildinfo.h.cmakein  buildinfo.h.cmakein.bak  config.h.cmakein  config.h.cmakein.bak
src/gromacs/: CMakeLists.txt  CMakeLists.txt.bak
src/gromacs/compat/: utility.h.bak
src/gromacs/domdec/: CMakeLists.txt  CMakeLists.txt.bak  domdec.cpp  gpuhaloexchange.h  gpuhaloexchange_impl.cpp  gpuhaloexchange_impl.cu  gpuhaloexchange_impl.hip.cpp  gpuhaloexchange_impl.hip.cpp.bak  gpuhaloexchange_impl.hip.h  gpuhaloexchange_impl.hpp  gpuhaloexchange_impl.hpp.bak  gpuhaloexchange_impl_gpu.cpp  gpuhaloexchange_impl_gpu.hip.cpp  gpuhaloexchange_impl_hip.cpp  gpuhaloexchange_impl_hip.h  hashedmap.h
src/gromacs/ewald/: CMakeLists.txt  pme.cpp  pme.cpp.bak  pme.h  pme.h.bak  pme.hip.h  pme.hpp  pme.hpp.bak  pme_calculate_splines.hip.h  pme_coordinate_receiver_gpu.h  pme_coordinate_receiver_gpu_impl.cpp  pme_coordinate_receiver_gpu_impl.cpp.bak  pme_coordinate_receiver_gpu_impl.h  pme_coordinate_receiver_gpu_impl.hip.cpp  pme_coordinate_receiver_gpu_impl.hip.cpp.bak  pme_coordinate_receiver_gpu_impl.hip.h  pme_coordinate_receiver_gpu_impl_gpu.cpp  pme_coordinate_receiver_gpu_impl_hip.cpp  pme_force_sender_gpu.h  pme_force_sender_gpu.h.bak  pme_force_sender_gpu_impl.cpp  pme_force_sender_gpu_impl.cpp.bak  pme_force_sender_gpu_impl.cu  pme_force_sender_gpu_impl.h  pme_force_sender_gpu_impl.hip.cpp  pme_force_sender_gpu_impl.hip.cpp.bak  pme_force_sender_gpu_impl.hip.h  pme_force_sender_gpu_impl_gpu.cpp  pme_force_sender_gpu_impl_gpu.hip.cpp  pme_force_sender_gpu_impl_hip.cpp  pme_gather.clh.bak  pme_gather.cu  pme_gather.hip.cpp  pme_gather.hip.cpp.bak  pme_gather_hip.cpp  pme_gather_sycl.cpp.bak  pme_gpu.cpp  pme_gpu.cpp.bak  pme_gpu_3dfft.h  pme_gpu_3dfft.hip.cpp  (+61 more)
src/gromacs/fft/: CMakeLists.txt  calcgrid.cpp  fft5d.cpp  gpu_3dfft.cpp  gpu_3dfft.cpp.bak  gpu_3dfft.h  gpu_3dfft_cufft.cu  gpu_3dfft_cufft.cuh  gpu_3dfft_cufft.hip.cpp  gpu_3dfft_cufft.hip.cpp.bak  gpu_3dfft_cufft.hip.hpp  gpu_3dfft_cufft.hpp  gpu_3dfft_heffte.cpp  gpu_3dfft_heffte.h  gpu_3dfft_hip.cppfft.hip.cpp  gpu_3dfft_hip_vkfft.hip.cpp  gpu_3dfft_hip_vkfft.hpp  gpu_3dfft_hipfft.hip.cpp  gpu_3dfft_hipfft.hpp  gpu_3dfft_impl.h  gpu_3dfft_ocl.cpp  gpu_3dfft_ocl.h  gpu_3dfft_sycl_mkl.cpp  gpu_3dfft_sycl_mkl.h  gpu_3dfft_sycl_rocfft.cpp
src/gromacs/gmxana/: anadih.cpp  gmx_angle.cpp  gmx_covar.cpp  gmx_disre.cpp
src/gromacs/gmxpreprocess/: readir.cpp
src/gromacs/gpu_utils/: CMakeLists.txt  cuda_arch_utils.cuh  cuda_kernel_utils.cuh  cuda_kernel_utils.hip.h  cuda_kernel_utils_hip.h  cudautils.cuh  cudautils.hip.cpp  cudautils.hip.h  cudautils_hip.h  device_event.cuh  device_event.h  device_event.h.bak  device_event.hpp  device_event.hpp.bak  device_stream.cu  device_stream.h  device_stream.h.bak  device_stream.hip.cpp  device_stream_hip.cpp  device_stream_manager.cpp  device_stream_manager.h  device_stream_sycl.cpp  devicebuffer.cuh  devicebuffer.h  devicebuffer.h.bak  devicebuffer.hip.h  devicebuffer.hpp  devicebuffer.hpp.bak  devicebuffer_datatype.h  devicebuffer_datatype.h.bak  devicebuffer_hip.h  devicebuffer_sycl.h.bak  gpu_copy_kernel.h  gpu_macros.h  gpu_macros.h.bak  gpu_utils.cpp  gpu_utils.cpp.bak  gpu_utils.cu  gpu_utils.h  gpu_utils.h.bak  (+49 more)
src/gromacs/hardware/: CMakeLists.txt  detecthardware.cpp  device_information.h  device_information.h.bak  device_management.cu  device_management.h  device_management.hip.cpp  device_management_common.cpp  device_management_hip.cpp  device_management_ocl.cpp  gpu_hw_info.cpp
src/gromacs/listed_forces/: CMakeLists.txt  gpubonded_impl.cpp  gpubonded_impl.h  gpubonded_impl.hip.cpp  gpubonded_impl_hip.cpp  gpubondedkernels.hip.cpp  gpubondedkernels_hip.cpp  listed_forces_gpu.h  listed_forces_gpu.h.bak  listed_forces_gpu_impl.cpp  listed_forces_gpu_impl.cpp.bak  listed_forces_gpu_impl.cu  listed_forces_gpu_impl.h  listed_forces_gpu_impl.h.bak  listed_forces_gpu_impl.hip.cpp  listed_forces_gpu_impl_gpu.cpp  listed_forces_gpu_internal.cu  listed_forces_gpu_internal.hip.cpp  listed_forces_gpu_internal.hip.cpp.bak
src/gromacs/math/: arrayrefwithpadding.h  paddedvector.h  vectypes.h
src/gromacs/mdlib/: CMakeLists.txt  constr.cpp  force.h  forcerec.cpp  gpuforcereduction.h  gpuforcereduction_impl.cpp  gpuforcereduction_impl_hip.cpp  gpuforcereduction_impl_internal.cu  gpuforcereduction_impl_internal.hip.cpp  leapfrog_cuda.cuh  leapfrog_cuda.hip.cpp  leapfrog_cuda.hip.h  leapfrog_gpu.cpp  leapfrog_gpu.h  leapfrog_gpu.h.bak  leapfrog_gpu_hip.cpp  leapfrog_gpu_internal.cu  leapfrog_gpu_internal.h  leapfrog_gpu_internal.hip.cpp  lincs_cuda.cuh  lincs_cuda.hip.cpp  lincs_cuda.hip.h  lincs_gpu.cpp  lincs_gpu.cpp.bak  lincs_gpu.cuh  lincs_gpu.h  lincs_gpu.h.bak  lincs_gpu_hip.cpp  lincs_gpu_internal.cu  lincs_gpu_internal.h  lincs_gpu_internal.hip.cpp  lincs_gpu_internal_sycl.cpp.bak  (+29 more)
src/testutils/: CMakeLists.txt  TestMacros.cmake
src/unittest_amd/: dump.sh  gfx906-pmc.txt  gfx908-pmc.txt
tests/: CMakeLists.txt
(+292 files in other folders)
